# bioevidence-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
app/: __init__.py  main.py  streamlit_app.py
data/: README.md
docs/: ARCHITECTURE.md  DECISIONS.md  DEMO_SCRIPT.md  EVALUATION.md  EVIDENCE_ANNOTATION_GUIDE.md  EXTRACTION_ANNOTATION_TASK_V2.md  EXTRACTION_MODEL_REPORT.md  LIMITATIONS.md  PROJECT_BRIEF.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md
examples/: milestone3_evidence_example.json  milestone4_eval_dataset.jsonl  milestone5_agent_report.json
notebooks/: exploration.ipynb
schemas/: model_evidence_extraction.v1.schema.json
scripts/: bootstrap.py  build_extraction_candidates.py  build_index.py  convert_bioasq.py  demo_query.py  diagnose_extraction.py  draft_extraction_candidates.py  import_hetionet.py  ingest_pubmed.py  render_extraction_review.py  run_agent.py  run_baseline.py  run_eval.py  run_extraction_eval.py  run_graph_eval.py  seed_demo_corpus.py  setup_extraction_adapter.py  tasks.ps1  validate_extraction_annotations.py
tests/: conftest.py  test_agent_answerer.py  test_agent_planner.py  test_agent_state.py  test_agent_workflow.py  test_agent_workflow_agent.py  test_api_main.py  test_config.py  test_convert_bioasq.py  test_dense_retrieval.py  test_diagnose_extraction_cli.py  test_draft_extraction_candidates_cli.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_evaluation_runner.py  (+34 more)
(+116 files in other folders)
